# weather_parser

./: Cargo.toml  Makefile  README.md  input.txt  output.json
src/: grammar.pest  lib.rs  main.rs
tests/: simple_tests.rs
