[package]
name = "weather_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"  
authors = ["Andrii Kviatkovskyi"]
description = "A parser for extracting data about weather"
repository = "https://github.com/AndriiKviatkovskyi/weather_parser"
documentation = "https://docs.rs/weather_parser"
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "2.0.2"
